--- a/package.json
+++ b/package.json
@@ -13,51 +13,34 @@
   "author": "Chakravardhan Reddy",
   "license": "ISC",
   "dependencies": {
-    "@azure/storage-blob": "^12.9.0",
-    "@types/bcrypt": "^5.0.0",
-    "@types/cors": "^2.8.12",
-    "@types/csvtojson": "^2.0.0",
-    "@types/jwt-simple": "^0.5.33",
-    "@types/moment": "^2.13.0",
-    "@types/multer": "^1.4.7",
-    "@types/random-seed": "^0.3.3",
-    "@types/supertest": "^2.0.12",
     "aws-sdk": "^2.1160.0",
     "axios": "^0.27.2",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
-    "connect-multiparty": "^2.2.0",
     "cors": "^2.8.5",
-    "csvtojson": "^2.0.10",
     "dotenv": "^16.0.0",
     "express": "^4.18.1",
+    "form-data": "^4.0.0",
     "google-auth-library": "^8.0.2",
-    "helmet": "^4.6.0",
     "jimp": "^0.16.1",
     "jwt-simple": "^0.5.6",
-    "moment": "^2.29.3",
-    "moment-timezone": "^0.5.34",
     "mongoose": "^5.13.14",
-    "morgan": "^1.10.0",
     "multer": "^1.4.4",
-    "multer-azure": "^2.0.1",
-    "node-p5": "^1.0.4",
     "nodemailer": "^6.7.5",
-    "random-seed": "^0.3.0",
-    "request": "^2.88.2",
     "winston": "^3.7.2"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
-    "@types/gm": "^1.18.12",
     "@types/jest": "^27.5.1",
+    "@types/jwt-simple": "^0.5.33",
     "@types/mongoose": "^5.11.97",
+    "@types/multer": "^1.4.7",
     "@types/nodemailer": "^6.4.4",
-    "@types/request": "^2.48.8",
-    "@types/sharp": "^0.30.4",
+    "@types/supertest": "^2.0.12",
     "jest": "^28.1.0",
     "supertest": "^6.2.3",
-    "ts-jest": "^28.0.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.6.4"
   }
