--- a/package.json
+++ b/package.json
@@ -17,16 +17,19 @@
     "axios": "^0.27.2",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
+    "cheerio": "^1.0.0-rc.12",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.18.1",
     "form-data": "^4.0.0",
     "google-auth-library": "^8.0.2",
     "jimp": "^0.16.1",
+    "jsdom": "^20.0.0",
     "jwt-simple": "^0.5.6",
     "mongoose": "^5.13.14",
     "multer": "^1.4.4",
     "nodemailer": "^6.7.5",
+    "puppeteer": "^15.3.1",
     "winston": "^3.7.2"
   },
   "devDependencies": {
@@ -34,6 +37,7 @@
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/jest": "^27.5.1",
+    "@types/jsdom": "^16.2.14",
     "@types/jwt-simple": "^0.5.33",
     "@types/mongoose": "^5.11.97",
     "@types/multer": "^1.4.7",
