--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "multer": "^1.4.4",
     "nodemailer": "^6.7.5",
     "puppeteer": "^15.3.1",
+    "razorpay": "^2.8.2",
     "winston": "^3.7.2"
   },
   "devDependencies": {
@@ -44,6 +45,7 @@
     "@types/nodemailer": "^6.4.4",
     "@types/supertest": "^2.0.12",
     "jest": "^28.1.0",
+    "razorpay-typescript": "^1.0.12",
     "supertest": "^6.2.3",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.6.4"
