--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "author": "Chakravardhan Reddy",
   "license": "ISC",
   "dependencies": {
-    "aws-sdk": "^2.1160.0",
+    "aws-sdk": "^2.1140.0",
     "axios": "^0.27.2",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
@@ -23,12 +23,15 @@
     "express": "^4.18.1",
     "form-data": "^4.0.0",
     "google-auth-library": "^8.0.2",
+    "i": "^0.3.7",
     "jimp": "^0.16.1",
     "jsdom": "^20.0.0",
     "jwt-simple": "^0.5.6",
     "mongoose": "^5.13.14",
     "multer": "^1.4.4",
+    "multer-s3": "^2.10.0",
     "nodemailer": "^6.7.5",
+    "npm": "^8.14.0",
     "puppeteer": "^15.3.1",
     "razorpay": "^2.8.2",
     "winston": "^3.7.2"
