--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "npm": "^8.14.0",
     "puppeteer": "^15.3.1",
     "razorpay": "^2.8.2",
+    "shuffle-array": "^1.0.1",
     "winston": "^3.7.2"
   },
   "devDependencies": {
@@ -46,6 +47,7 @@
     "@types/mongoose": "^5.11.97",
     "@types/multer": "^1.4.7",
     "@types/nodemailer": "^6.4.4",
+    "@types/shuffle-array": "^1.0.2",
     "@types/supertest": "^2.0.12",
     "jest": "^28.1.0",
     "razorpay-typescript": "^1.0.12",
