--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "multer-s3": "^2.10.0",
     "nodemailer": "^6.7.5",
     "npm": "^8.14.0",
+    "opensea-scraper": "^5.0.4",
     "puppeteer": "^15.3.1",
     "razorpay": "^2.8.2",
     "shuffle": "^0.2.5",
