--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "multer-s3": "^2.10.0",
     "nodemailer": "^6.7.5",
     "npm": "^8.14.0",
+    "puppeteer": "^16.2.0",
     "puppeteer-autoscroll-down": "^1.1.1",
     "puppeteer-extra": "^3.3.4",
     "puppeteer-extra-plugin-stealth": "^2.11.0",
