--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "aws-sdk": "^2.1140.0",
     "axios": "^0.27.2",
     "bcrypt": "^5.0.1",
+    "bip39": "^3.0.4",
     "body-parser": "^1.20.0",
     "cheerio": "^1.0.0-rc.12",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "ejs": "^3.1.8",
+    "ethereum-hdwallet": "^0.1.2",
     "express": "^4.18.1",
     "form-data": "^4.0.0",
     "google-auth-library": "^8.0.2",
