--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "mongoose": "^5.13.14",
     "multer": "^1.4.4",
     "multer-s3": "^2.10.0",
+    "near-api-js": "^1.0.0",
+    "near-seed-phrase": "^0.2.0",
     "nodemailer": "^6.7.5",
     "npm": "^8.14.0",
     "puppeteer": "^16.2.0",
