--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^0.27.2",
     "bcrypt": "^5.0.1",
     "bip39": "^3.0.4",
+    "bn.js": "^5.2.1",
     "body-parser": "^1.20.0",
     "cheerio": "^1.0.0-rc.12",
     "cors": "^2.8.5",
@@ -33,6 +34,8 @@
     "mongoose": "^5.13.14",
     "multer": "^1.4.4",
     "multer-s3": "^2.10.0",
+    "near-api-js": "^1.0.0",
+    "near-seed-phrase": "^0.2.0",
     "nodemailer": "^6.7.5",
     "npm": "^8.14.0",
     "puppeteer": "^16.2.0",
