--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "nft.storage": "^7.0.0",
     "nodemailer": "^6.7.5",
     "npm": "^8.14.0",
+    "openai": "^3.1.0",
     "puppeteer": "^16.2.0",
     "puppeteer-autoscroll-down": "^1.1.1",
     "puppeteer-extra": "^3.3.4",
